[gd_scene load_steps=2 format=2]

[ext_resource path="res://example/example_script.gd" type="Script" id=1]

[node name="Voronoi2D Example Scene" type="Node2D"]

[node name="VoronoiTester" type="Node2D" parent="."]
script = ExtResource( 1 )
use_mouse_as_limit = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Control" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.5486
margin_right = -10.0
margin_bottom = -10.0
grow_horizontal = 0
size_flags_horizontal = 0
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 146.0
margin_bottom = 20.0
alignment = 2

[node name="RandomiseButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 146.0
margin_bottom = 20.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Randomise Positions"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 25.0
margin_right = 146.0
margin_bottom = 45.0
alignment = 2

[node name="AddNodeButton" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 43.0
margin_right = 146.0
margin_bottom = 20.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Add Node (+1)"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 50.0
margin_right = 146.0
margin_bottom = 70.0
alignment = 2

[node name="RemoveNodeButton" type="Button" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 19.0
margin_right = 146.0
margin_bottom = 20.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Remove Node (-1)"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 75.0
margin_right = 146.0
margin_bottom = 95.0
alignment = 2

[node name="Add10NodesButton" type="Button" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 35.0
margin_right = 146.0
margin_bottom = 20.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Add Node (+10)"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 100.0
margin_right = 146.0
margin_bottom = 120.0
alignment = 2

[node name="Remove10NodesButton" type="Button" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 11.0
margin_right = 146.0
margin_bottom = 20.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Remove Node (-10)"

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/RandomiseButton" to="VoronoiTester" method="_on_randomise"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/AddNodeButton" to="VoronoiTester" method="_on_add_node_1"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer4/RemoveNodeButton" to="VoronoiTester" method="_on_remove_node_1"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer3/Add10NodesButton" to="VoronoiTester" method="_on_add_node_10"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer5/Remove10NodesButton" to="VoronoiTester" method="_on_remove_node_10"]
